package edu.hitsz.prop;

import edu.hitsz.application.Main;
import edu.hitsz.basic.AbstractFlyingObject;

public abstract class AbstractProp extends AbstractFlyingObject {

    public static double genBloodRate = 0.5;
    public static double genBombRate = 0.3;
    public static double genBulletRate = 0.2;

    public AbstractProp(int locationX, int locationY, int speedX, int speedY){
        super(locationX, locationY, speedX, speedY);
    }

    @Override
    public void forward(){
        super.forward();

        if (locationY >= Main.WINDOW_HEIGHT ) {
            vanish();
        }
    }

    /**
     * 道具效果，子类必须实现
     */
    public abstract int effect();
}
