package edu.hitsz.prop;

public interface Clear {
    int clear();
}
